# fuel

./: .gitignore  README.md  build-package.sh  heartbeat-topkg.diff  ubuntu_1204_x86_64.preseed  zzzz
contrib/fuel-utils/: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
contrib/fuel-utils/etc/: fdb_cleaner.conf
contrib/fuel-utils/fuel_utils/core/: __init__.py  daemonize_green.py
contrib/fuel-utils/fuel_utils/fdb_cleaner/: __init__.py  config.py  daemon.py  settings.py
deployment/puppet/apt/: .project  README.md
deployment/puppet/astute/: config.yaml  openstack_system
deployment/puppet/ceph/: README.md
deployment/puppet/cinder/: .project
deployment/puppet/common/: .project
deployment/puppet/concat/: .project
deployment/puppet/corosync/: .project
deployment/puppet/galera/: .project
fuel_test/: README.rst  astute.py  base_test_case.py  config.py  helpers.py  manifest.py  pip-requires  prepare.py  prepare_tempest.py  prepare_tempest_ci.py  settings.py  settings_monroid_local.py
fuel_test/ci/: ci_base.py  ci_bm.py  ci_vm.py
fuel_test/cobbler/: cobbler_test_case.py  test_compact.py  test_full.py  test_minimal.py  test_simple.py  test_single.py  test_swift.py  vm_test_case.py
iso/: Makefile  functions.sh  ks-full.cfg  ks.cfg  ks_build.mk  requirements-rpm.txt  yum_ks_repos.mk
iso/mirror/: boot.mk  module.mk
rpms/: gdisk-0.8.4-1.el6.x86_64.rpm  leveldb-1.7.0-2.el6.x86_64.rpm  qemu-kvm_rbd.spec  qemu-lvm_rbd-debuginfo-1-1.x86_64.rpm  qemu-lvm_rbd.spec  snappy-1.0.5-1.el6.x86_64.rpm
utils/jenkins/: fuel_syntax_check.sh
(+592 files in other folders)
