[metadata]
name = fuel_utils
version = 20131119-01
summary = CLI utilities for FUEL project
description-file =
    README.md
author = Mirantis
author_email = fuel-dev@mirantis.com
maintainer = Sergey Vasilenko
maintainer_email = svasilenko@mirantis.com
home-page = http://www.mirantis.com/FUEL/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    fuel_utils
data_files =
    /etc/fuel =
        etc/fdb_cleaner.conf
;scripts =
;    bin/fuel-fdb-cleaner

[entry_points]
console_scripts =
    fuel-fdb-cleaner = fuel_utils.fdb_cleaner:main

[global]
setup-hooks =
    pbr.hooks.setup_hook
